frontend-v3.css
/* ... */
.vibot-twbs .vb-html.alert {
  box-sizing: border-box !important;
}


/* Bubble */
.bubble > .row {
  position: relative;
  padding: 1.25rem !important;
  /* 0.75rem */
  border: 0 solid transparent;
  border-radius: 0.25rem;
  color: #383d41;
  background-color: var(--color-grey-faded);
  border-color: #d6d8db;
  margin-right: 5px;
}


.bubble.bubble--warning .row {
  background-color: var(--color-warning-faded);
}

.bubble.bubble--danger .row {
  background-color: var(--color-danger-highlight);
}

.bubble.bubble--danger .row,
.bubble.bubble--danger .row label,
.bubble.bubble--danger .row .text-muted,
.bubble.bubble--danger .row .form-check-label {
  color: #fff !important;
}

.bubble.bubble--no-margin > .row {
  margin: 0 !important;
}


/* Footer */

.vibot-twbs .navbar-footer {
  margin-top: 1rem;
  margin-bottom: 2.25rem;
}

.vibot-twbs .navbar-footer .container {
  padding-left: 15px;
  padding-right: 35px;
}


.vibot-twbs .navbar-footer .container > .row {
  margin: 0;
  background-color: var(--color-tertiary-faded);
  justify-content: start;
  padding: 0.75rem 1.25rem;
  margin-bottom: 1rem;
  box-shadow: var(--border-shadow);
  border: 0 solid transparent;
  border-radius: 0.25rem;
  color: #383d41;
}


/* Stuff.. */
#initial-form-loader {
  display: none;
}

.affected-person-addon:after {
  content: 'vom Ticketinhaber';
  background-color: #616f7b;
  color: #ffffff;
  padding: 8px 12px;
  border-radius: 0.25rem;
  position: absolute;
  bottom: -11px;
  left: calc(50% - 6px);
  transform: translate(-50%, 0%);
  z-index: 11;
  font-size: .8em;
  font-weight: 500;
  border: 0;
}

@media only screen and (max-width: 375px) {
  .affected-person-addon:after {
    width: 75%;
    text-align: center;
  }
}

.vibot-twbs .badge-primary {
  color: #fff;
  background-color: #616f7b;
}

.vibot-twbs .btn-primary {
  color: #fff;
  background-color: #8e0237;
  border-color: #8e0438;
}

.vibot-twbs .vb-day-picker .vb-day-picker-days .vb-day-picker-day.is-selected span {
  background-color: #8e0237;
  color: #fff;
}

